Tests/Runtime2/Error/InHandler/.build/throworiginal.pr
{
  "name": "ThrowOriginal",
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022original error\u0022",
      "lineNumber": 2,
      "indent": 0,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "message",
              "value": "original error",
              "type": "string"
            }
          ],
          "errors": [],
          "warnings": []
        }
      ],
      "errors": [],
      "warnings": [],
      "waitForExecution": true
    }
  ],
  "subGoals": [],
  "visibility": 1,
  "path": "/ThrowOriginal.goal",
  "prPath": "/.build/throworiginal.pr",
  "hash": "5e78ed4e0257cbd34d2d187df04e690a49fe85050453cd668665564e859a918c",
  "isSetup": false,
  "isEvent": false,
  "isTest": false,
  "errors": [],
  "warnings": [],
  "fullPath": "ThrowOriginal"
}